# fullstack-starter

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.ko.md  README.md  mise.toml
.agents/: mcp.json  mcp_config.json  oma-config.yaml
.agents/agents/variants/: agent-variant.schema.json  claude.json  cursor.json  gemini.json  opencode.json
.agents/hooks/core/: serena-primer.ts  types.ts
.agents/hooks/variants/: antigravity.json  commandcode.json  gemini.json  hook-variant.schema.json
.agents/rules/: GEMINI.md  backend.md  build-guide.md  lint-format-guide.md  mobile.md  test-guide.md
.agents/skills/: _version.json
.agents/skills/brainstorm/: SKILL.md
.agents/skills/coordinate-pro/: SKILL.md
.agents/skills/frontend-agent/: SKILL.md
.agents/skills/oma-academic-writer/: SKILL.md
.agents/skills/oma-backend/: SKILL.md
.agents/skills/oma-coordination/: SKILL.md
.agents/skills/oma-deepsec/: SKILL.md
.agents/skills/oma-design/: SKILL.md
.agents/skills/oma-frontend/: SKILL.md
.agents/skills/oma-refactor/: SKILL.md
.agents/skills/oma-skill-creator/: SKILL.md
.agents/skills/oma-tf-infra/: SKILL.md
.agents/skills/oma-translator/: SKILL.md
.agents/skills/setup/: SKILL.md
.agents/workflows/: coordinate.md  exec-plan.md  plan.md  ultrawork.md
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  backend-engineer.md  db-engineer.md  debug-investigator.md  docs-curator.md  frontend-engineer.md  mobile-engineer.md  pm-planner.md  qa-reviewer.md  refactor-engineer.md  research-explorer.md  tf-infra-engineer.md
.claude/hooks/: keyword-detector.ts
.claude/rules/: GEMINI.md  backend.md  build-guide.md  commit.md  database.md  i18n-guide.md  lint-format-guide.md  market.md  mobile.md  test-guide.md
.claude/skills/coordinate-pro/: SKILL.md
.claude/skills/explain/: SKILL.md
.claude/skills/setup/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: architecture-reviewer.toml  backend-engineer.toml  db-engineer.toml  debug-investigator.toml  docs-curator.toml  frontend-engineer.toml  mobile-engineer.toml  pm-planner.toml  qa-reviewer.toml  refactor-engineer.toml  research-explorer.toml  tf-infra-engineer.toml
.codex/hooks/: persistent-mode.ts
.codex/skills/coordinate-pro/: SKILL.md
.cursor/: hooks.json  mcp.json
.cursor/agents/: architecture-reviewer.md  backend-engineer.md  db-engineer.md  debug-investigator.md  docs-curator.md  frontend-engineer.md  mobile-engineer.md  pm-planner.md  qa-reviewer.md  refactor-engineer.md  research-explorer.md  tf-infra-engineer.md
.cursor/rules/: GEMINI.mdc  backend.mdc  build-guide.mdc  commit.mdc  database.mdc  lint-format-guide.mdc  market.mdc  mobile.mdc  test-guide.mdc
.cursor/skills/: coordinate-pro
.cursor/skills/coordinate-pro/: SKILL.md
.gemini/: settings.json
.github/prompts/: coordinate-pro.prompt.md  docs.prompt.md  explain.prompt.md  ultrawork.prompt.md
.github/skills/: exec-plan
.github/workflows/: README.md  codeql.yml  deploy-api.yml  deploy-mobile.yml  deploy-web.yml  deploy-worker.yml  release-please.yml  review.yml  terraform-ci.yml  update-oma.yml
.opencode/: opencode.jsonc
.opencode/agents/: architecture-reviewer.md  backend-engineer.md  db-engineer.md  debug-investigator.md  docs-curator.md  frontend-engineer.md  mobile-engineer.md  pm-planner.md  qa-reviewer.md  refactor-engineer.md  research-explorer.md  tf-infra-engineer.md
.opencode/plugins/oma/: agentmemory-client.ts  state-boundary.ts  test-filter.ts
.qwen/: settings.json
.qwen/hooks/: oma-hook.sh
.qwen/skills/: coordinate
.serena/: project.yml
apps/api/: .env.example  mise.toml  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260405_000001_add_password_hash_to_users.py
apps/api/src/: main.py
apps/api/src/auth/: router.py
apps/api/src/lib/: auth.py  body_limit.py  config.py  dependencies.py  rate_limit.py  telemetry.py  token_store.py
apps/api/src/lib/ai/: __init__.py  telemetry.py
apps/api/src/lib/storage/: __init__.py  azure.py  base.py  factory.py
apps/api/src/users/: model.py
apps/api/tests/: conftest.py  test_auth.py  test_body_limit.py  test_genai_telemetry.py  test_storage_azure.py  test_storage_factory.py
apps/infra/: README.md
apps/infra/aws/: README.md  alb.tf  autoscaling.tf  cdn.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  locals.tf  monitoring.tf  outputs.tf  provider.tf  rds.tf  scheduler.tf  security_groups.tf  ses.tf  sns.tf  sqs.tf  storage.tf  terraform.prod.tfvars.example  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf  waf.tf
apps/infra/az/: README.md  acr.tf  cdn.tf  containerapps.tf  iam.tf  locals.tf  main.tf  monitoring.tf  network.tf  outputs.tf  postgres.tf  provider.tf  redis.tf  scheduler.tf  servicebus.tf  storage.tf  terraform.prod.tfvars.example  terraform.tfvars.example  variables.tf  versions.tf  waf.tf
apps/infra/freemium/: .gitignore  b2.tf  locals.tf  outputs.tf  terraform.tfvars.example  variables.tf
apps/infra/gcp/: .gitignore  README.ko.md  README.md  cdn.tf  compute.tf  database.tf  iam.tf  network.tf  scheduler.tf  security.tf  terraform.tfvars.example  variables.tf
apps/infra/hackathon/: mise.toml  provider.tf  terraform.tfvars.example  vercel.tf  versions.tf
apps/infra/oci/: README.md  compartment.tf  container_instances.tf  iam.tf  lb.tf  locals.tf  monitoring.tf  network.tf  ocir.tf  (+13 more)
apps/mobile/: mise.toml  pubspec.yaml
apps/web/: .env.example  components.json  next.config.ts  package.json
apps/worker/: pyproject.toml
apps/worker/src/: main.py
apps/worker/src/lib/: config.py  logging.py  middleware.py  oidc.py
apps/worker/src/routers/: health.py  tasks.py
apps/worker/tests/: test_health.py  test_oidc.py  test_tasks.py
docs/: AUTH.cn.md  AUTH.jp.md  AUTH.ko.md  AUTH.md  AUTH.pt.md  README.cn.md  README.jp.md  README.ko.md  README.pt.md  USAGE.cn.md  USAGE.jp.md  USAGE.ko.md  USAGE.md  USAGE.pt.md  WHY.cn.md  WHY.jp.md  WHY.ko.md  WHY.md  WHY.pt.md
docs/plans/: freemium-infra-design.md  hackathon-infra-design.md
(+136 files in other folders)
