[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.1",
    "asyncpg>=0.31.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "redis>=8.0.0",
    "structlog>=25.5.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "jwcrypto>=1.5.7",
    "psycopg2-binary>=2.9.12",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "poethepoet>=0.46.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "factory-boy>=3.3.3",
    "aiosqlite>=0.22.1",
]

[tool.uv]
managed = true

[tool.poe.tasks]
dev = "fastapi dev src/main.py --port 8000"
start = "fastapi run src/main.py --port 8000"

# Database
migrate = "alembic upgrade head"
"migrate-create" = "alembic revision --autogenerate -m"
"migrate-down" = "alembic downgrade -1"

# Linting & Formatting
lint = "ruff check --fix --unsafe-fixes ."
format = "ruff format ."
check = ["lint", "format"]

# Type checking
typecheck = "mypy src"

# All checks
"all-checks" = ["check", "typecheck"]

# Testing
test = "pytest tests/"
"test-cov" = "pytest tests/ --cov=src --cov-report=html"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis.asyncio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jwcrypto.*"]
ignore_missing_imports = true
