[project]
name = "worker"
version = "0.1.0"
description = "FastAPI worker for async tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "google-cloud-tasks>=2.22.0",
    "google-cloud-pubsub>=2.39.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "poethepoet>=0.46.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-custom-exit-code>=0.3.0",
]

[tool.uv]
managed = true

[tool.poe.tasks]
dev = "fastapi dev src/main.py --port 8080"
start = "fastapi run src/main.py --port 8080"
lint = "ruff check --fix --unsafe-fixes ."
format = "ruff format ."
check = ["lint", "format"]
typecheck = "mypy src"
test = "pytest tests/ --suppress-no-test-exit-code"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
